added error for parent directory mismatch